--- a/package.json
+++ b/package.json
@@ -1,38 +1,29 @@
 {
   "name": "efdm-lastmanagement",
-  "version": "0.1.0",
-  "description": "Energieflexible Produktionsplanung - Demand Response System",
+  "version": "1.0.0",
+  "description": "⚡ Energieflexible Produktionsplanung - Demand Response System",
   "main": "project/server/index.js",
   "scripts": {
     "start": "node project/server/index.js",
     "dev": "nodemon project/server/index.js",
-    "build": "webpack --mode production",
-    "build:dev": "webpack --mode development",
-    "watch": "webpack --mode development --watch",
-    "test": "jest"
+    "test": "echo \"Tests werden später hinzugefügt\" && exit 0",
+    "lint": "eslint project/server/**/*.js",
+    "format": "prettier --write \"project/**/*.{js,json,md}\""
   },
-  "keywords": ["demand-response", "energy", "production-planning"],
-  "author": "cawujiv",
+  "keywords": [
+    "demand-response",
+    "energy-management",
+    "production-planning",
+    "lastmanagement"
+  ],
+  "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "dotenv": "^16.3.1",
-    "mongoose": "^8.0.0",
-    "cors": "^2.8.5",
-    "axios": "^1.6.0",
-    "node-cache": "^5.1.2"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.1",
-    "@babel/core": "^7.23.0",
-    "@babel/preset-react": "^7.23.0",
-    "babel-loader": "^9.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "nodemon": "^3.0.1"
   }
 }
